syntax = "proto3";

package dialogs.messages.event.v1;

option go_package = "gen/kafka/producer/proto";

import "google/protobuf/timestamp.proto";

message DialogsMessagesEventV1 {
  // event_id id события, являющийся ключом идемпотентности,
  // по которому можно отсеивать дубли.
  string event_id = 1;
  // timestamp дата и время возникновения события.
  google.protobuf.Timestamp timestamp = 2;

  string dialog_id = 3;

  message MessageCreated {
    uint64 message_id = 1;
    string from = 2;
    string to = 3;
  }

  message MessagesRead {
    repeated uint64 message_ids = 1;
    string to = 2;
  }

  oneof event {
    MessageCreated created = 4;
    MessagesRead messages_read = 5;
  }
}
